__k8s__/agg-identity-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agg-identity-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agg-identity
  template:
    metadata:
      labels:
        app: agg-identity
    spec:
      containers:
        - image: devpies/client-agg-identity:latest
          name: agg-identity
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "250m"
              memory: "250Mi"
