__k8s__/app-accounting-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-accounting-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-accounting
  template:
    metadata:
      labels:
        app: app-accounting
    spec:
      containers:
        - image: devpies/client-app-accounting:latest
          name: app-accounting
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "250m"
              memory: "250Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: app-accounting-svc
spec:
  selector:
    app: app-accounting
  ports:
    - port: 4010
      targetPort: 4000
