__k8s__/mic-projects-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mic-projects-depl
spec:
  selector:
    matchLabels:
      app: mic-projects
  template:
    metadata:
      labels:
        app: mic-projects
    spec:
      containers:
        - image: devpies/client-mic-projects:latest
          name: mic-projects
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "250m"
              memory: "250Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mic-projects-svc
spec:
  selector:
    app: mic-projects
  ports:
    - port: 4020
      targetPort: 4000
